--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "filepond": "^4.32.7",
     "framer-motion": "^12.4.7",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
@@ -40,9 +41,12 @@
     "react-bootstrap": "^2.10.7",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
+    "react-filepond": "^7.1.3",
+    "react-files": "^3.0.3",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.2",
+    "react-uploader": "^3.43.0",
     "reactstrap": "^9.2.3",
     "recharts": "^2.15.0",
     "tailwind-scrollbar": "^3.1.0",
