--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-uploader": "^3.43.0",
     "reactstrap": "^9.2.3",
     "recharts": "^2.15.0",
+    "stripe": "^17.7.0",
     "tailwind-scrollbar": "^3.1.0",
     "timezones-list": "^3.0.3"
   },
