--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.1.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@stripe/react-stripe-js": "^3.4.0",
+    "@stripe/stripe-js": "^6.0.0",
     "@types/bcrypt": "^5.0.2",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
